--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -4,6 +4,10 @@
   vars:
      vnode_prefix: vnode-
   roles:
+  - role: indigo-dc.openvpn
+    openvpn_type_of_node: 'front'
+    openvpn_frontname: 'slurmserver'
+    when: fe_hybrid_cluster
   - role: indigo-dc.nfs
     nfs_mode: 'server'
     nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
@@ -12,3 +16,4 @@
     slurm_wn_ips: '{{ wn_ips }}'
     slurm_vnode_prefix: '{{ vnode_prefix }}'
     slurm_wn_nodenames: '{{ groups["lrms_wn"]|map("extract", hostvars, "ansible_hostname")|list if "lrms_wn" in groups else [] }}'
+    slurm_server_ip: '{{ slurm_front_end_ip }}'
