--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -446,6 +446,11 @@ node_types:
         type: string
         description: IP of the Front-End node
         required: true
+      hybrid:
+        type: boolean
+        description: Flag to specify that this WorkerNode will work in a hybrid environment
+        default: false
+        required: false
     capabilities:
         wn:
           type: tosca.capabilities.Scalable
@@ -464,6 +469,7 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/lrms/torque/torque_wn_install.yml
           inputs:
             torque_front_end_ip: { get_property: [ SELF, front_end_ip ] }
+            wn_hybrid_cluster:  { get_property: [ SELF, hybrid] }
 
   tosca.nodes.indigo.LRMS.WorkerNode.Slurm:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode
@@ -480,6 +486,7 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/lrms/slurm/slurm_wn_install.yml
           inputs:
             slurm_front_end_ip: { get_property: [ SELF, front_end_ip ] }
+            wn_hybrid_cluster:  { get_property: [ SELF, hybrid] }
 
   tosca.nodes.indigo.LRMS.FrontEnd:
     derived_from: tosca.nodes.SoftwareComponent
@@ -491,6 +498,11 @@ node_types:
         description: List of IPs of the WNs
         required: false
         default: []
+      hybrid:
+        type: boolean
+        description: Flag to specify that this FrontEnd will work in a hybrid environment
+        default: false
+        required: false
     capabilities:
         lrms:
           type: tosca.capabilities.indigo.LRMS
@@ -511,6 +523,7 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/lrms/torque/torque_fe_install.yml
           inputs:
             torque_wn_ips: { get_property: [ SELF, wn_ips ] }
+            fe_hybrid_cluster:  { get_property: [ SELF, hybrid] }
 
   tosca.nodes.indigo.LRMS.FrontEnd.Slurm:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
@@ -530,6 +543,8 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/lrms/slurm/slurm_fe_install.yml
           inputs:
             wn_ips: { get_property: [ SELF, wn_ips ] }
+            slurm_front_end_ip: { get_attribute: [ HOST, private_address, 0 ] }
+            fe_hybrid_cluster:  { get_property: [ SELF, hybrid] }
 
   tosca.nodes.indigo.LRMS.FrontEnd.Local:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
@@ -887,10 +902,10 @@ node_types:
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
         file: indigo-dc.consul
-        type: tosca.artifacts.AnsibleGalaxy.role    
+        type: tosca.artifacts.AnsibleGalaxy.role
       haproxy_agent_role:
         file: indigo-dc.haproxy-consul
-        type: tosca.artifacts.AnsibleGalaxy.role          
+        type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         create:
@@ -901,8 +916,7 @@ node_types:
       - host:
           capability: tosca.capabilities.Container
           node: tosca.nodes.indigo.Compute
-          relationship: tosca.relationships.HostedOn          
-          
+          relationship: tosca.relationships.HostedOn
 
   tosca.nodes.indigo.OneDataStorage:
     derived_from: tosca.nodes.BlockStorage
@@ -1108,7 +1122,7 @@ node_types:
         type: list
         entry_schema:
           type: string
-        description: A list of CREAM CE identifiers to launch the job        
+        description: A list of CREAM CE identifiers to launch the job
       stdoutput:
         required: no
         description: Name of the file to get the standard output stream of the user application
