--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -389,6 +389,16 @@ node_types:
         description: INDIGO IAM access token
         required: false
         default: iam_access_token
+      iam_clues_client_id:
+        type: string
+        description: INDIGO IAM client id to be used by CLUES
+        required: false
+        default: iam_clues_client_id
+      iam_clues_client_secret:
+        type: string
+        description: INDIGO IAM client secret to be used by CLUES
+        required: false
+        default: iam_clues_client_secret
       marathon_credentials:
         type: tosca.datatypes.Credential
         description: Credentials to access the marathon endpoint from CLUES plugin
@@ -428,6 +438,8 @@ node_types:
             ec3_deployment_id: { get_property: [ SELF, deployment_id] }
             orchestrator_url: { get_property: [ SELF, orchestrator_url] }
             ec3_iam_access_token: { get_property: [ SELF, iam_access_token] }
+            ec3_iam_clues_client_id: { get_property: [ SELF, iam_clues_client_id] }
+            ec3_iam_clues_client_secret: { get_property: [ SELF, iam_clues_client_secret] }
             clues_marathon_credentials: { get_property: [ SELF, marathon_credentials] }
             clues_chronos_credentials: { get_property: [ SELF, chronos_credentials] }
             clues_mesos_credentials: { get_property: [ SELF, mesos_credentials] }
@@ -685,19 +697,19 @@ node_types:
       consul_servers:
         type: string
         required: no
-        default: localhost
+        default: { get_attribute: [ HOST, public_address ] }
       zookeeper_host_list:
         type: string
         required: no
-        default: localhost
+        default: { get_attribute: [ HOST, public_address ] }
       zookeeper_peers:
         type: string
         required: no
-        default: localhost
+        default: { get_attribute: [ HOST, public_address ] }
       mesos_masters_list:
         type: string
         required: no
-        default: localhost
+        default: { get_attribute: [ HOST, public_address ] }
       marathon_username:
         type: string
         required: no
@@ -736,10 +748,10 @@ node_types:
         configure:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mesos/mesos_master_install.yml
           inputs:
-            consul_server_ips: { get_attribute: [ HOST, public_address ] }
-            zookeeper_host_list_ips: { get_attribute: [ HOST, public_address ] }
-            zookeeper_peers_ips: { get_attribute: [ HOST, public_address ] }
-            mesos_masters_list_ips: { get_attribute: [ HOST, public_address ] }
+            consul_server_ips: { get_property: [ SELF, consul_servers ] }
+            zookeeper_host_list_ips: { get_property: [ SELF, zookeeper_host_list ] }
+            zookeeper_peers_ips: { get_property: [ SELF, zookeeper_peers ] }
+            mesos_masters_list_ips: { get_property: [ SELF, mesos_masters_list ] }
             marathon_user: { get_property: [ SELF, marathon_username ] }
             marathon_pass: { get_property: [ SELF, marathon_password ] }
             chronos_user: { get_property: [ SELF, chronos_username ] }
