--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -359,7 +359,7 @@ node_types:
         create:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/galaxy/galaxy_tools_configure.yml
           inputs:
-            galaxy_flavor: { get_property: [ HOST, flavor ] }
+            galaxy_flavor: { get_property: [ SELF, flavor ] }
             galaxy_admin_api_key: { get_property: [ HOST, admin_api_key ] }
             instance_public_ip: { get_attribute: [ HOST, public_address ] }
 
