Change parent of indigo.LRMS capability to Container

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -39,7 +39,7 @@ capability_types:
           type: string
 
   tosca.capabilities.indigo.LRMS:
-    derived_from: tosca.capabilities.Root
+    derived_from: tosca.capabilities.Container
     properties:
       type:
         type: string
