--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -3,6 +3,12 @@
   connection: local
   vars:
      vnode_prefix: vnode-
+  pre_tasks:
+  - name: "Add nodes mapping in hosts file"
+    lineinfile: dest=/etc/hosts regexp='.*{{ item.1 }}.*$' line="{{ item.1 }} {{ vnode_prefix }}{{ item.0 + 1 }} {{ vnode_prefix }}{{ item.0 + 1 }}.localdomain" state=present
+    with_indexed_items: '{{ wn_ips }}'
+  - name: "Add master mapping in hosts file"
+    lineinfile: dest=/etc/hosts regexp='127\.0\.0\.1.*$' line="127.0.0.1 localhost slurmserver slurmserver.localdomain" state=present
   roles:
   - role: indigo-dc.nfs
     nfs_mode: 'server'
@@ -11,4 +17,3 @@
     slurm_type_of_node: 'front'
     slurm_wn_ips: '{{ wn_ips }}'
     slurm_vnode_prefix: '{{ vnode_prefix }}'
-    slurm_wn_nodenames: '{{ groups["lrms_wn"]|map("extract", hostvars, "ansible_hostname")|list if "lrms_wn" in groups else [] }}'
