--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -1,6 +1,9 @@
 ---
 - hosts: localhost
   connection: local
+  pre_tasks:
+  - name: "Add master mapping in hosts file"
+    lineinfile: dest=/etc/hosts regexp='.*{{ slurm_front_end_ip }}.*$' line="{{ slurm_front_end_ip }} slurmserver slurmserver.localdomain" state=present
   roles:
   - role: indigo-dc.nfs
     nfs_mode: 'client'
