--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -544,7 +544,7 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/lrms/slurm/slurm_fe_install.yml
           inputs:
             wn_ips: { get_property: [ SELF, wn_ips ] }
-            slurm_front_end_ip: { get_attribute: [ HOST, private_address, 0 ] }
+            front_end_ip: { get_attribute: [ HOST, private_address, 0 ] }
 
   tosca.nodes.indigo.LRMS.FrontEnd.Local:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
