Diffuse changes needed to use the updated ansible roles

--- a/artifacts/mesos/mesos_slave_install.yml
+++ b/artifacts/mesos/mesos_slave_install.yml
@@ -2,13 +2,10 @@
 - hosts: localhost
   connection: local
   roles:
-    - role: indigo-dc.docker
-      docker_bridge_ip: "172.0.17.1"
-
     - role: indigo-dc.consul
       consul_mode: "agent"
       docker_bridge_ip: "172.0.17.1"
-      consul_servers: "{{ mesos_master_ips }}"
+      consul_servers: "{{ mesos_masters_list_ips }}"
 
     - role: indigo-dc.mesos
       mesos_install_mode: "slave"
