--- a/artifacts/mesos/mesos_master_install.yml
+++ b/artifacts/mesos/mesos_master_install.yml
@@ -2,28 +2,26 @@
 - hosts: localhost
   connection: local
   roles:
-    - role: indigo-dc.docker
-      docker_bridge_ip: "172.0.17.1"
-
     - role: indigo-dc.consul
       consul_mode: "server"
       docker_bridge_ip: "172.0.17.1"
-      consul_servers: "{{ consul_server_ips }}"
+      consul_servers: "{{ mesos_masters_list_ips }}"
 
     - role: indigo-dc.zookeeper
-      zookeeper_host_list: "{{ zookeeper_host_list_ips }}"
+      zookeeper_host_list: "{{ mesos_masters_list_ips }}"
 
     - role: indigo-dc.mesos
       mesos_install_mode: "master"
-      zookeeper_peers: "{{ zookeeper_peers_ips }}"
+      zookeeper_peers: "{{ mesos_masters_list_ips }}"
       mesos_masters_list: "{{ mesos_masters_list_ips }}"
 
     - role: indigo-dc.marathon
-      zookeeper_peers: "{{ zookeeper_peers_ips }}"
+      zookeeper_peers: "{{ mesos_masters_list_ips }}"
       marathon_username: "{{ marathon_user }}"
       marathon_password: "{{ marathon_pass }}"
-
+   
     - role: indigo-dc.chronos
-      zookeeper_peers: "{{ zookeeper_peers_ips }}"
+      zookeeper_peers: "{{ mesos_masters_list_ips }}"
       chronos_username: "{{ chronos_user }}"
       chronos_password: "{{ chronos_pass }}"
+   
