--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -8,7 +8,7 @@
     lineinfile: dest=/etc/hosts regexp='.*{{ item.1 }}.*$' line="{{ item.1 }} {{ vnode_prefix }}{{ item.0 + 1 }} {{ vnode_prefix }}{{ item.0 + 1 }}.localdomain" state=present
     with_indexed_items: '{{ wn_ips }}'
   - name: "Add master mapping in hosts file"
-    lineinfile: dest=/etc/hosts regexp='.*{{ front_end_ip }}.*$' line="{{ slurm_front_end_ip }} slurmserver slurmserver.localdomain" state=present
+    lineinfile: dest=/etc/hosts regexp='.*{{ front_end_ip }}.*$' line="{{ front_end_ip }} slurmserver slurmserver.localdomain" state=present
   roles:
   - role: indigo-dc.nfs
     nfs_mode: 'server'
