--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -365,7 +365,7 @@ node_types:
           inputs:
             galaxy_flavor: { get_property: [ SELF, flavor ] }
             galaxy_admin_api_key: { get_property: [ HOST, admin_api_key ] }
-            instance_public_ip: { get_attribute: [ HOST, public_address ] }
+            instance_public_ip: { get_attribute: [ HOST, public_address, 0 ] }
 
   tosca.nodes.indigo.ElasticCluster:
     derived_from: tosca.nodes.SoftwareComponent
