--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -576,6 +576,12 @@ node_types:
         type: map
         entry_schema:
           type: string
+      labels:
+        required: no
+        type: map
+        entry_schema:
+          type: string
+
 
   tosca.nodes.indigo.Container.Application.Docker.Chronos:
     derived_from: tosca.nodes.indigo.Container.Application.Docker
