--- a/examples/galaxy_tosca.yaml
+++ b/examples/galaxy_tosca.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/mtangaro-galaxy-tools/custom_types.yaml
 
 description: >
   TOSCA test for launching a Galaxy Server also configuring the bowtie2
@@ -45,6 +45,11 @@ topology_template:
       type: string
       description: Galaxy flavor for tools installation
       default: "galaxy-no-tools"
+    reference_data:
+      type: boolean
+      description: Install Reference data
+      default: true
+
  
   node_templates:
 
@@ -64,6 +69,7 @@ topology_template:
       properties:
         flavor: { get_input: flavor }
         admin_api_key: { get_input: admin_api_key }
+        reference_data: { get_input: reference_data }
       requirements:
         - host: galaxy
 
@@ -104,7 +110,7 @@ topology_template:
             relationship:
               type: tosca.relationships.AttachesTo
               properties:
-                location: /mnt/disk
+                location: /export
                 device: hdb
 
     my_block_storage:
