reworked tosca type for Galaxy Reference Data

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -349,11 +349,6 @@ node_types:
         description: key to access the API with admin role
         default: not_very_secret_api_key
         required: false
-      reference_data:
-        type: boolean
-        description: Install Reference data
-        default: true
-        required: true
     requirements:
       - host:
           capability: tosca.capabilities.Container
@@ -363,9 +358,6 @@ node_types:
       galaxy_role:
         file: indigo-dc.galaxy-tools,handler-include-static-no
         type: tosca.artifacts.AnsibleGalaxy.role
-      galaxy_role:
-        file: indigo-dc.galaxycloud-refdata
-        type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
         configure:
@@ -374,7 +366,36 @@ node_types:
             galaxy_flavor: { get_property: [ SELF, flavor ] }
             galaxy_admin_api_key: { get_property: [ HOST, admin_api_key ] }
             instance_public_ip: { get_attribute: [ HOST, public_address, 0 ] }
+
+  tosca.nodes.indigo.GalaxyReferenceData:
+    derived_from: tosca.nodes.WebApplication
+    properties:
+      reference_data:
+        type: boolean
+        description: Install Reference data
+        default: true
+        required: true
+      flavor:
+        type: string
+        description: name of the Galaxy flavor
+        required: true
+        default: galaxy-no-tools
+    requirements:
+      - host:
+          capability: tosca.capabilities.Container
+          node: tosca.nodes.indigo.GalaxyShedTool
+          relationship: tosca.relationships.HostedOn
+    artifacts:
+      galaxy_role:
+        file: indigo-dc.galaxycloud-refdata
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/mtangaro-galaxy-tools/artifacts/galaxy/galaxy_refdata_configure.yml
+          inputs:
             get_refdata: { get_property: [ SELF, reference_data ] }
+            galaxy_flavor: { get_property: [ SELF, flavor ] }
 
   tosca.nodes.indigo.ElasticCluster:
     derived_from: tosca.nodes.SoftwareComponent
