--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -343,7 +343,7 @@ node_types:
         default: "not_a_provider_url"
         required: false
     artifacts:
-      galaxy_role:
+      galaxy_os_role:
         file: indigo-dc.galaxycloud-os
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role:
