--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -329,7 +329,7 @@ node_types:
     properties:
       storage:
         type: string
-        description: Storage type: Iaas Block Storage (default), Onedaata, Filesystem encryption
+        description: Storage type (Iaas Block Storage (default), Onedaata, Filesystem encryption)
         default: "open"
         requred: true
       token:
